sample-azure-ha-yamls/azure-ha-statefulset.yaml
# Copyright Sonatype, Inc., 2023, All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nxrm-nexus-statefulset
  namespace: nxrm
  labels:
    app: nxrm
spec:
  replicas: 2
  serviceName: nxrm-nexus-statefulset-service
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      initContainers:
        # chown nexus-data to 'nexus' user and init log directories/files for a new pod
        # otherwise the side car containers will crash a couple of times and backoff whilst waiting
        # for nxrm-app to start and this increases the total start up time.
        - name: chown-nexusdata-owner-to-nexus-and-init-log-dir
          image: busybox:1.33.1
          command: [/bin/sh]
          args:
            - -c
            - >-
              mkdir -p /nexus-data/etc/logback &&
              mkdir -p /nexus-data/log/tasks &&
              mkdir -p /nexus-data/log/audit &&
              touch -a /nexus-data/log/tasks/allTasks.log &&
              touch -a /nexus-data/log/audit/audit.log &&
              touch -a /nexus-data/log/request.log &&
              chown -R '200:200' /nexus-data
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            limits:
              cpu: "0.2"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
      terminationGracePeriodSeconds: 20
      containers:
        - name: nxrm-app
          image: sonatype/nexus3:latest
          # See help documentation, these are minimum system requirements
          resources:
            limits:
              cpu: 4 #This is an example. Update as needed
              memory: "8Gi" #This is an example. Update as needed
            requests:
              cpu: 4 #This is an example. Update as needed
              memory: "8Gi" #This is an example. Update as needed
          securityContext:
            runAsUser: 200
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          env:
            - name: DB_NAME
              value: nexus
            - name: DB_PORT
              value: 5432
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: nxrm-db-secret
                  key: db-password
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: nxrm-db-secret
                  key: db-user
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  name: nxrm-db-secret
                  key: db-host
            - name: NEXUS_SECURITY_INITIAL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: nxrm-admin-secret
                  key: nexus-admin-password
            - name: NEXUS_SECURITY_RANDOMPASSWORD
              value: "false"
            - name: INSTALL4J_ADD_VM_PARAMS
              value: "-Xms2703m -Xmx2703m -Dnexus.licenseFile=/nxrm-secrets/nxrm-license.lic \
          -Dnexus.datastore.clustered.enabled=true -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=require \
          -Dnexus.datastore.nexus.username=${DB_USER} \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD} \
          -Dnexus.blobstore.provisionDefaults=false"
          volumeMounts:
            - mountPath: /nxrm-secrets
              name: nxrm-secrets
            - name: nexus-data
              mountPath: /nexus-data
            - name: logback-tasklogfile-override
              mountPath: /nexus-data/etc/logback/logback-tasklogfile-appender-override.xml
              subPath: logback-tasklogfile-appender-override.xml
        - name: request-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/request.log']
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            limits:
              cpu: "0.2"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
        - name: audit-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/audit/audit.log']
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            limits:
              cpu: "0.2"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
        - name: tasks-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/tasks/allTasks.log']
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            limits:
              cpu: "0.2"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
      volumes:
        - name: nxrm-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: nxrm-nexus-secret
              fsType: ext4
        - name: logback-tasklogfile-override
          configMap:
            name: nxrm-nexus-logback-tasklogfile-override
            items:
              - key: logback-tasklogfile-appender-override.xml
                path: logback-tasklogfile-appender-override.xml
  volumeClaimTemplates:
    - metadata:
        name: nexus-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "managed-csi"
        resources:
          requests:
            storage: 100Gi
